# libirecovery

./: .gitignore  Makefile.am  configure.ac
cython/: Makefile.am  irecovery.pxd  irecovery.pyx
m4/: ac_pkg_cython.m4  cython_python.m4
src/: libirecovery.c
